# xingchen-L

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT_20260201.md  Dockerfile  README.md  check_env.py  cleanup_data.py  docker-compose.yml  implementation_plan.md  pyproject.toml  pytest.ini  requirements.txt  test_output.txt  walkthrough.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  DEVELOPER_HANDOFF.md  GEMINI_INTEGRATION_ROADMAP.md  HIERARCHICAL_PSYCHE_MODEL.md  KNOWN_ISSUES.md  MODIFICATION_REPORT_2026-02-15.md  PSYCHE_IMPLEMENTATION_PLAN.md  XINGCHEN_V3_HANDBOOK.md  architecture_audit.md  deployment.md  gemini_integration_memo.md  nas_deployment_guide.md  project_status_report.md  protocols.md  raspberry_pi_guide.md  server_buying_guide.md
docs/Claude/: CLAUDE_SESSION_2026-02-07_MEMORY_HIERARCHY.md  CLAUDE_SESSION_CHANGELOG_2026-02-07.md
docs/Gemini/: GEMINI_INTEGRATION_ROADMAP.md  GEMINI_SESSION_CHANGELOG_2026-02-07.md  GEMINI_SESSION_CHANGELOG_2026-02-09.md  GEMINI_SESSION_SUMMARY_2026-02-07.md
docs/api/: protocols.md
scripts/: stress_test.py  test_config_loading.py
src/: main.py
tests/: comprehensive_test.py  conftest.py  debug_navigator_cycle.py  force_diary.py  simulate_life.py  smoke_test_v2.py  stress_test_graph_rag.py  test_alias_resolution.py  test_cognitive_graph.py  test_deep_clean_real.py  test_evolution_scenario.py  test_graph_rag.py  test_integration_real.py  test_subconscious_awakening.py  test_time_perception.py  test_vector_library.py  verify_driver_fix.py  verify_dynamic_addressing.py
xingchen/: app.py  main.py
(+207 files in other folders)
